--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.12.4",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.3",
+    "fetch-retry": "^5.0.6",
     "gatsby": "^5.7.0",
     "gatsby-link": "^5.8.0",
     "gatsby-plugin-image": "^3.6.0",
@@ -25,6 +26,7 @@
     "gatsby-source-wordpress": "^7.6.0",
     "gatsby-transformer-sharp": "^5.6.0",
     "material-ui": "^0.20.2",
+    "postcss-reporter": "^7.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
